--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -36,10 +36,15 @@ android {
 dependencies {
     compile project(':deeplinkdispatch')
     apt project(':deeplinkdispatch-processor')
-
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.2.1'
-
     testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'junit:junit:4.12'
+    compile project(':sample1')
+}
+
+apt {
+    arguments {
+        packageName "com.github.gaoxuxu"
+    }
 }
