--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.airbnb.deeplinkdispatch.sample" >
+    package="com.airbnb.deeplinkdispatch.sample">
 
     <application
         android:name=".SampleApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -18,23 +18,41 @@
         </activity>
         <activity
             android:name=".SecondActivity"
-            android:label="@string/title_second"
-            />
+            android:label="@string/title_second" />
         <activity
-            android:name="com.airbnb.deeplinkdispatch.DeepLinkActivity"
+            android:name="com.github.gaoxuxu.DeepLinkActivity"
             android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="http" android:host="example.com" />
+
+                <data
+                    android:host="example.com"
+                    android:scheme="http" />
             </intent-filter>
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="dld" />
+            </intent-filter>
+        </activity>
+        <activity android:name="github.gaoxuxu.deeplinkdispatch.sample1.MainActivity" />
+        <activity
+            android:name="github.gaoxuxu.deeplinkdispatch.sample1.DeepLinkActivity"
+            android:theme="@android:style/Theme.NoDisplay">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="gaoxuxu" />
             </intent-filter>
         </activity>
     </application>
